Added a new function to test

--- a/test.html
+++ b/test.html
@@ -176,6 +176,9 @@
         document.getElementById('goals')
             .append(node)
     }
+    function doNothing() {
+	
+    }
 </script>
 </body>
 </html>
